--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,411 @@
-/* You can add global styles to this file, and also import other style files */
+/* FONTS GOOGLE */
+@font-face {
+  font-family: "Ubuntu-Light";
+  src: url(./assets/font/Ubuntu-Light.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Ubuntu-Regular";
+  src: url(./assets/font/Ubuntu-Regular.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Ubuntu-Medium";
+  src: url(./assets/font/Ubuntu-Medium.ttf) format("truetype");
+}
+@font-face {
+  font-family: "Ubuntu-Bold";
+  src: url(./assets/font/Ubuntu-Bold.ttf) format("truetype");
+}
+/* VARIABLES CSS */
+
+$header-height: 4rem;
+
+$color-primary: #5271ff;
+$color-secondary: #ffffff;
+$background-color: #020414;
+$font-family-Light: "Ubuntu-Light", sans-serif;
+$font-family-Regular: "Ubuntu-Regular", sans-serif;
+$font-family-Medium: "Ubuntu-Medium", sans-serif;
+$font-family-Bold: "Ubuntu-Bold", sans-serif;
+
+/* .5rem=8px, 1rem=16px, 1.5rem=24px ... */
+$very-big-font-size: 3rem;
+$big-font-size: 2rem;
+$h1-font-size: 1.5rem;
+$h2-font-size: 1.25rem;
+$h3-font-size: 1.125rem;
+$normal-font-size: 0.938rem;
+$small--font-size: 0.813rem;
+$smaller-font-size: 0.75rem;
+
+/* Font wight */
+$font-medium: 500;
+$font-semi-bold: 600;
+$font-bold: 700;
+$font-extra-bold: 800;
+
+/* Margin bottom */
+$mb-0-25: 0.25rem;
+$mb-0-5: 0.5rem;
+$mb-0-75: 0.75rem;
+$mb-1: 1rem;
+$mb-1-5: 1.5rem;
+$mb-2: 2rem;
+$mb-2-5: 2.5rem;
+$mb-3: 3rem;
+
+/* Z index */
+
+$z-tooltip: 10;
+$z-fixed: 100;
+$z-modal: 1000;
+
+/* font size for large devices */
+@media screen and (min-width: 968px) {
+  :root {
+    $big-font-size: 3rem;
+    $h1-font-size: 2.25rem;
+    $h2-font-size: 1.5rem;
+    $h3-font-size: 1.25rem;
+    $normal-font-size: 1rem;
+    $small--font-size: 0.875rem;
+    $smaller-font-size: 0.813rem;
+  }
+}
+
+/* Base */
+
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0 0 $header-height 0;
+  font-size: $normal-font-size;
+  background-color: $background-color;
+  color: $color-secondary;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  color: $color-secondary;
+  font-weight: $font-medium;
+}
+
+p {
+  margin: 0 !important;
+}
+
+ul {
+  list-style: none;
+  margin: 0 !important;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* layout */
+
+.container {
+  width: 90%;
+}
+
+.header {
+  background-color: $background-color;
+  box-shadow: 0 0.5rem 0.5rem rgba(61, 61, 61, 0.25);
+  position: sticky;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  left: 0;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo {
+  h2 {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+  font-family: $font-family-Bold;
+  font-size: $h1-font-size;
+  .nav_logo_color {
+    color: $color-primary;
+    display: inline-block;
+  }
+}
+
+.nav__list {
+  display: inline-block;
+  font-family: $font-family-Regular;
+  font-size: $h2-font-size;
+  ul {
+    display: inline-block;
+    display: flex;
+    flex-wrap: nowrap;
+    li {
+      display: inline-block;
+      margin: $mb-1-5;
+      .active {
+        color: $color-primary;
+      }
+    }
+  }
+}
+
+.max-width {
+  max-width: 1300px;
+  padding: 0 80px;
+  margin: auto;
+}
+
+.button1 {
+  background: $color-primary;
+  color: #fff;
+}
+.button2:hover {
+  background: $color-primary;
+  color: #fff;
+}
+.button1:hover {
+  color: #fff;
+  background: none;
+}
+
+/* home section styling */
+.home {
+  display: flex;
+  height: 100vh;
+  color: #fff;
+  min-height: 500px;
+  .max-width {
+    width: 100%;
+    display: flex;
+  }
+  .home-content .text-1 {
+    font-family: $font-family-Regular;
+    font-size: $big-font-size;
+  }
+  .home-content .text-2 {
+    font-size: $very-big-font-size;
+    font-family: $font-family-Bold;
+    margin-left: -3px;
+  }
+  .home-content .text-3 {
+    font-size: $big-font-size;
+    font-family: $font-family-Regular;
+    margin: 5px 0;
+  }
+  .home-content .text-3 span {
+    color: $color-primary;
+    font-weight: $font-medium;
+    font-size: $big-font-size;
+  }
+  .home__btns {
+    margin-top: $mb-1-5;
+    width: 320px;
+    display: flex;
+    justify-content: space-between;
+    a {
+      display: inline-block;
+      color: #fff;
+      font-size: $normal-font-size;
+      font-family: $font-family-Medium;
+      padding: 12px 36px;
+      margin-top: $mb-0-75;
+      font-weight: 400;
+      border-radius: 40px;
+      border: 2px solid $color-primary;
+      transition: all 0.3s ease;
+    }
+  }
+}
+
+section .title {
+  position: relative;
+  text-align: center;
+  font-size: 40px;
+  margin-bottom: 60px;
+  padding-bottom: 20px;
+}
+/* about section styling */
+.about .about-content {
+  display: flex;
+}
+section .title::before {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  width: 180px;
+  height: 3px;
+  background: #ffffff;
+  transform: translateX(-50%);
+}
+section .title::after {
+  position: absolute;
+  bottom: -8px;
+  left: 50%;
+  font-size: 20px;
+  color: $color-primary;
+  padding: 0 5px;
+  background: $background-color;
+  transform: translateX(-50%);
+}
+
+#about,
+#skills,
+#projects,
+#contact {
+  display: block;
+  height: 200px; /*same height as header*/
+  margin-top: -115px; /*same height as header*/
+  visibility: hidden;
+}
+
+.about {
+  height: 100vh;
+  .about-content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .title {
+    text-transform: capitalize;
+    z-index: -1;
+    font-family: $font-family-Regular;
+    font-size: $very-big-font-size;
+  }
+  .title::after {
+    font-family: $font-family-Medium;
+    font-size: $h2-font-size;
+    content: "who I am";
+  }
+  .about-content .left {
+    width: 400px;
+  }
+  .about-content .left img {
+    height: 400px;
+    width: 400px;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  .about-content .right {
+    width: 600px;
+  }
+  .about-content .right .text {
+    font-family: $font-family-Regular;
+    font-size: $big-font-size;
+    font-weight: 600;
+    margin-bottom: 10px;
+  }
+  .about-content .right .text span {
+    color: $color-primary;
+  }
+  .about-content .right p {
+    line-height:25px;
+    text-align: justify;
+    font-family: $font-family-Light;
+    font-size: $h2-font-size;
+  }
+  .about__buttons {
+    display: flex;
+    justify-content: center;
+    .about__btns {
+      margin-top: $mb-1-5;
+      width: 320px;
+      display: flex;
+      justify-content: space-between;
+      a {
+        display: inline-block;
+        color: #fff;
+        font-size: $normal-font-size;
+        font-family: $font-family-Medium;
+        padding: 12px 36px;
+        margin-top: $mb-0-75;
+        font-weight: 400;
+        border-radius: 40px;
+        border: 2px solid $color-primary;
+        transition: all 0.3s ease;
+      }
+    }
+  }
+}
+
+.skills {
+  height: 100vh;
+  .skills__content {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .skills__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-family: $font-family-Medium;
+    font-size: $h1-font-size;
+    ul{
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: space-evenly;
+      li {
+        display: inline-block;
+        margin: $mb-1-5;
+        .active {
+          color: $color-primary;
+        }
+      }
+    }
+  }
+  
+  .skills__content-list-item{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 700px;
+    height: 500px;
+    .skills__content-list-item-options{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      h3{
+        margin: 30px 0 30px 0;
+        font-family: $font-family-Regular;
+        font-size: $h2-font-size;
+      }
+    }
+    .skills__content-list-item-content{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      h3{
+        margin: 30px 0 30px 0;
+        font-family: $font-family-Regular;
+        font-size: $h2-font-size;
+      }
+    }
+  }
+
+}
