--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,7 +114,9 @@ a {
   text-decoration: none;
   color: inherit;
 }
-
+.active {
+  color: $color-primary;
+}
 /* layout */
 
 .container {
@@ -161,9 +163,6 @@ nav {
     li {
       display: inline-block;
       margin: $mb-1-5;
-      .active {
-        color: $color-primary;
-      }
     }
   }
 }
@@ -319,7 +318,7 @@ section .title::after {
     color: $color-primary;
   }
   .about-content .right p {
-    line-height:25px;
+    line-height: 25px;
     text-align: justify;
     font-family: $font-family-Light;
     font-size: $h2-font-size;
@@ -350,20 +349,13 @@ section .title::after {
 
 .skills {
   height: 100vh;
-  .skills__content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;
-  }
-
   .skills__list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     font-family: $font-family-Medium;
     font-size: $h1-font-size;
-    ul{
+    ul {
       display: flex;
       flex-wrap: wrap;
       align-items: center;
@@ -377,35 +369,80 @@ section .title::after {
       }
     }
   }
-  
-  .skills__content-list-item{
+
+  .skills__carrousel {
+    width: 100%;
+    max-width: 120em;
+    overflow: hidden;
+  }
+
+  .skills__content {
+    width: 300%;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    transition: all 0.5s ease-in-out;
+    transform: translatex(0%);
+    overflow: hidden;
+  }
+  .skills__content-section {
+    width: calc(100% / 3);
+  }
+  .skills__content-list-item {
+    padding: $mb-2-5;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 700px;
+    width: 100%;
     height: 500px;
-    .skills__content-list-item-options{
+    .skills__content-list-item-options {
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      flex-direction: row;
+      justify-content: space-between;
       align-items: center;
-      h3{
+      width: 100%;
+      h3 {
         margin: 30px 0 30px 0;
         font-family: $font-family-Regular;
         font-size: $h2-font-size;
       }
     }
-    .skills__content-list-item-content{
+    .skills__content-list-item-content {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      h3{
+      h3 {
         margin: 30px 0 30px 0;
         font-family: $font-family-Regular;
         font-size: $h2-font-size;
       }
     }
   }
+}
+.next {
+  transform: rotate(180deg);
+}
+.myskills__carousel {
+  width: calc(100% / 3);
+  height: 500px;
+  /* overflow: hidden; */
+}
+.myskills__carousel-big {
+  height: 300%;
+  background-color: lightblue;
+  transition: all 0.5s ease-in-out;
+  transform: translateY(0%);
+}
 
+.skills__content-list-item-rows {
+  left: 65px;
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  justify-content: space-between;
+  top: 40%;
+  height: 100px;
+  z-index: 100;
 }
