--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,27 +89,55 @@
         </ul>
       </div>
       <div #skillContent class="skills__content">
-        <div class="myskills__carousel">
-          <div class="skills__content-list-item-rows">
-            <a href="javascript:void(0)" (click)="prev()">
-              <img
-                src="../assets/icons/arrow.svg"
-                alt="arrow"
-                height="30px"
-                width="30px"
-              />
-            </a>
-            <a href="javascript:void(0)" (click)="next()">
-              <img
-                src="../assets/icons/arrow.svg"
-                alt="arrow"
-                height="30px"
-                width="30px"
-                class="next"
-                role="button"
-              />
-            </a>
-          </div>
+        <section class="myskills__carousel">
+          <carousel class="myskills__carousel-big carousel-item">
+            <ng-container *ngFor="let item of items">
+              <ng-container *carouselItem>
+                <section #myskillSections class="skills__content-section1">
+                  <div class="skills__content-list-item">
+                    <div class="skills__content-list-item-options">
+                      <h3>{{item.title}}</h3>
+                      <div class="skills__content-list-item-content">
+                        <ul>
+                          <li>
+                            <div class="skills__content-list-item-content-item">
+                              <img src="" alt="uwuww" />
+                            </div>
+                          </li>
+                          <li>
+                            <div class="skills__content-list-item-content-item">
+                              <img src="" alt="uwuwwwwwww" />
+                            </div>
+                          </li>
+                          <li>
+                            <div class="skills__content-list-item-content-item">
+                              <img src="" alt="uwuuu" />
+                            </div>
+                          </li>
+                          <li>
+                            <div class="skills__content-list-item-content-item">
+                              <img src="" alt="uwuuu" />
+                            </div>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </section>
+              </ng-container>
+            </ng-container>
+          </carousel>
+        </section>
+        <section class="skills__content-section"></section>
+        <section class="skills__content-section"></section>
+      </div>
+    </div>
+  </div>
+</section>
+<router-outlet></router-outlet>
+
+<!-- 
+  
           <div #myskillContent class="myskills__carousel-big carousel-item">
             <section #myskillSections class="skills__content-section1">
               <div class="skills__content-list-item">
@@ -205,11 +233,4 @@
               </div>
             </section>
           </div>
-        </div>
-        <section class="skills__content-section"></section>
-        <section class="skills__content-section"></section>
-      </div>
-    </div>
-  </div>
-</section>
-<router-outlet></router-outlet>
+ -->
