--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<span id="home"></span>
 <header class="header">
   <nav class="nav container">
     <div class="nav__logo">
@@ -18,7 +17,7 @@
     </div>
   </nav>
 </header>
-<section class="home">
+<section class="home" id="home">
   <div class="max-width">
     <div class="home-content">
       <div class="text-1">Hello, my name is</div>
@@ -33,8 +32,7 @@
     </div>
   </div>
 </section>
-<span id="about"></span>
-<section class="about">
+<section class="about" id="about">
   <div class="max-width">
     <h2 class="title">About me</h2>
     <div class="about-content">
@@ -71,8 +69,7 @@
     </div>
   </div>
 </section>
-<span id="skills"></span>
-<section class="skills">
+<section class="skills" id="skills">
   <div class="max-width">
     <div class="skills__carrousel">
       <div class="skills__list">
@@ -128,109 +125,10 @@
             </ng-container>
           </carousel>
         </section>
-        <section class="skills__content-section"></section>
-        <section class="skills__content-section"></section>
+        <section class="skills__content-section" style="background-color: aqua;">a</section>
+        <section class="skills__content-section" style="background-color: orange;">a</section>
       </div>
     </div>
   </div>
 </section>
 <router-outlet></router-outlet>
-
-<!-- 
-  
-          <div #myskillContent class="myskills__carousel-big carousel-item">
-            <section #myskillSections class="skills__content-section1">
-              <div class="skills__content-list-item">
-                <div class="skills__content-list-item-options">
-                  <h3>Frontend</h3>
-                  <div class="skills__content-list-item-content">
-                    <ul>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="uwuww" />
-                        </div>
-                      </li>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="uwuwwwwwww" />
-                        </div>
-                      </li>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="uwuuu" />
-                        </div>
-                      </li>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="uwuuu" />
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </section>
-            <section #myskillSections class="skills__content-section1">
-              <div class="skills__content-list-item">
-                <div class="skills__content-list-item-options">
-                  <h3>Backend</h3>
-                  <div class="skills__content-list-item-content">
-                    <ul>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="uwuww" />
-                        </div>
-                      </li>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="uwuwwwwwww" />
-                        </div>
-                      </li>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="uwuuu" />
-                        </div>
-                      </li>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="uwuuu" />
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </section>
-            <section #myskillSections class="skills__content-section1">
-              <div class="skills__content-list-item">
-                <div class="skills__content-list-item-options">
-                  <h3>OtherSkills</h3>
-                  <div class="skills__content-list-item-content">
-                    <ul>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="aaaaaaaaaaa" />
-                        </div>
-                      </li>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="aaaaaaaa" />
-                        </div>
-                      </li>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="aaaaaaaa" />
-                        </div>
-                      </li>
-                      <li>
-                        <div class="skills__content-list-item-content-item">
-                          <img src="" alt="aaaaaaa" />
-                        </div>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-            </section>
-          </div>
- -->
