--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,6 +117,11 @@ a {
 .active {
   color: $color-primary;
 }
+
+#home,#about,#skills{
+  padding: 200px 0;
+}
+
 /* layout */
 
 .container {
@@ -265,16 +270,6 @@ section .title::after {
   padding: 0 5px;
   background: $background-color;
   transform: translateX(-50%);
-}
-
-#about,
-#skills,
-#projects,
-#contact {
-  display: block;
-  height: 200px; /*same height as header*/
-  margin-top: -115px; /*same height as header*/
-  visibility: hidden;
 }
 
 .about {
@@ -437,12 +432,15 @@ section .title::after {
 }
 
 .skills__content-list-item-rows {
-  left: 65px;
+  left: 60px;
   display: flex;
   position: absolute;
   flex-direction: column;
-  justify-content: space-between;
-  top: 40%;
-  height: 100px;
+  top: 34%;
+  height: 33.3333%;
+  width: 50px;
   z-index: 100;
+  justify-content: space-between;
+  align-items: center;
+  align-content: space-between;
 }
