seccion front-end

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -98,22 +98,27 @@
                         <ul>
                           <li>
                             <div class="skills__content-list-item-content-item">
-                              <img src="" alt="uwuww" />
+                              <img [src]="item.html" alt="html logo" class="image" />
                             </div>
                           </li>
                           <li>
                             <div class="skills__content-list-item-content-item">
-                              <img src="" alt="uwuwwwwwww" />
+                              <img [src]="item.css" alt="css logo" class="image" />
                             </div>
                           </li>
                           <li>
                             <div class="skills__content-list-item-content-item">
-                              <img src="" alt="uwuuu" />
+                              <img [src]="item.js" alt="js logo" class="image" />
                             </div>
                           </li>
                           <li>
                             <div class="skills__content-list-item-content-item">
-                              <img src="" alt="uwuuu" />
+                              <img [src]="item.typescript" alt="typescript logo" class="image" />
+                            </div>
+                          </li>
+                          <li>
+                            <div class="skills__content-list-item-content-item">
+                              <img [src]="item.angular" alt="angular logo" class="image" />
                             </div>
                           </li>
                         </ul>
@@ -126,7 +131,16 @@
           </carousel>
         </section>
         <section class="skills__content-section" style="background-color: aqua;">a</section>
-        <section class="skills__content-section" style="background-color: orange;">a</section>
+        <section class="skills__content-section" style="background-color: orange;">
+        <div>
+          <h3>Secundaria</h3>
+          <span>Tenico Electronico</span>
+          <div>
+            <i>calendar</i>
+            2011 - 2017
+          </div>
+        </div>
+        </section>
       </div>
     </div>
   </div>
