--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,9 @@ $header-height: 4rem;
 $color-primary: #5271ff;
 $color-secondary: #ffffff;
 $background-color: #020414;
+$text-color: #6a6c7c;
+$text-color-light: #9fa0ad;
+$input-color: #eeeffc;
 $font-family-Light: "Ubuntu-Light", sans-serif;
 $font-family-Regular: "Ubuntu-Regular", sans-serif;
 $font-family-Medium: "Ubuntu-Medium", sans-serif;
@@ -118,15 +121,48 @@ a {
   color: $color-primary;
 }
 
-#home,#about,#skills{
+#home,
+#about,
+#skills {
   padding: 200px 0;
+}
+
+/* Reusable css Classes */
+
+/* .section{
+  padding: 2rem 0 4rem;
+} */
+.section__title {
+  font-family: $font-family-Regular;
+  font-size: $very-big-font-size;
+}
+
+.section__subtitle {
+  display: block;
+  font-size: $h2-font-size;
+  font-family: $font-family-Light;
+  margin-bottom: $mb-3;
+}
+
+.section__title,
+.section__subtitle {
+  text-align: center;
 }
 
 /* layout */
 
 .container {
-  width: 90%;
+  width: 100%;
+  margin-left: $mb-1-5;
+  margin-right: $mb-1-5;
 }
+
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
+/* nav */
 
 .header {
   background-color: $background-color;
@@ -272,7 +308,7 @@ section .title::after {
   transform: translateX(-50%);
 }
 
-.about {  
+.about {
   .about-content {
     display: flex;
     flex-wrap: wrap;
@@ -384,19 +420,20 @@ section .title::after {
     width: calc(100% / 3);
   }
   .skills__content-list-item {
-    padding: $mb-2-5;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 500px;
     .skills__content-list-item-options {
+      margin: auto;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
       width: 100%;
       h3 {
+        text-align: center;
         margin: 30px 0 30px 0;
         font-family: $font-family-Regular;
         font-size: $h2-font-size;
@@ -412,17 +449,17 @@ section .title::after {
         font-family: $font-family-Regular;
         font-size: $h2-font-size;
       }
-      ul{
+      ul {
         display: grid;
         justify-items: center;
         width: 100%;
         align-content: center;
         justify-content: center;
       }
-      .two-skills{
+      .two-skills {
         grid-template-columns: 1fr 1fr 1fr;
       }
-      .one-skills{
+      .one-skills {
         grid-template-columns: 1fr 1fr 1fr 1fr;
       }
     }
@@ -457,7 +494,7 @@ section .title::after {
   align-content: space-between;
 }
 
-.image{
+.image {
   display: inline-block;
   width: 150px;
   height: 150px;
@@ -468,5 +505,143 @@ section .title::after {
   cursor: pointer;
   &:hover {
     filter: grayscale(0);
+  }
+}
+
+.qualification_data {
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  grid-column-gap: 1.5rem;
+  column-gap: 1.5rem;
+  justify-items: center;
+}
+.qualification_title {
+  font-family: $font-family-Medium;
+  font-size: $h2-font-size;
+}
+
+.qualification_subtitle {
+  display: inline-block;
+  font-family: $font-family-Light;
+  font-size: $h3-font-size;
+  margin-bottom: $mb-1;
+}
+
+.qualification_calendar {
+  font-size: $normal-font-size;
+  color: lightgray;
+}
+
+.qualification__rounder {
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: $color-primary;
+}
+
+.qualification__line {
+  display: block;
+  width: 2px;
+  height: 100%;
+  background-color: $color-primary;
+  transform: translate(6px, -7px);
+}
+.qualification__data-right {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.qualification__data-left {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.qualification_calendar img {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
+
+.contact__container {
+  font-family: $font-family-Regular;
+  row-gap: 3rem;
+  grid-template-columns: repeat(2, 1fr);
+  .contact__information {
+    display: flex;
+    margin-bottom: $mb-2;
+  }
+}
+.contact__icon {
+  width: 2rem;
+  height: 2rem;
+  font-size: 2rem;
+  color: $color-primary;
+  margin-right: $mb-0-75;
+}
+
+.contact__title {
+  font-size: $h2-font-size;
+  font-family: $font-family-Medium;
+}
+
+.contact__subtitle {
+  font-size: $h3-font-size;
+  color: $color-primary;
+}
+
+.contact__content {
+  background-color: $input-color;
+  border-radius: 0.5rem;
+  padding: 0.75rem 1rem 0.25rem;
+}
+
+.contact__label {
+  font-family: $font-family-Light;
+  font-size: $h3-font-size;
+  color: $background-color;
+}
+
+.contact__input {
+  width: 100%;
+  background-color: $input-color;
+  color: $text-color;
+  font-family: $font-family-Light;
+  font-size: $normal-font-size;
+  border: none;
+  outline: none;
+  padding: 0.25rem 0.5rem 0.5rem 0;
+}
+.contact__form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $color-primary;
+  font-size: 0.938rem;
+  font-family: "Ubuntu-Medium", sans-serif;
+  padding: 12px 36px;
+  margin-top: 0.75rem;
+  font-weight: 400;
+  border-radius: 40px;
+  border: 2px solid #5271ff;
+  transition: all 0.3s ease-out;
+  &:hover {
+    background: $color-primary;
+    color: $color-secondary;
+    img{
+      filter:brightness(500%);
+    }
+  }
+
+  p{
+    display: inline-block;
+    font-size: 1.125rem;
+  }
+  .contact__form-icon {
+    width: 20px;
+    margin-top: 7px;
+    height: 100%;
+    margin-left: .225rem;
   }
 }
