--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,6 +59,19 @@
           poder colaborar con todo lo que aprendí este tiempo y seguir
           aprendiendo a diario!.
         </p>
+        <!-- 
+          <p>I started in the world of development when I began my technical degree at 
+          UTN two years ago and since then I am excited and motivated to know every day 
+          a little more, to have every day more tools.<br/>
+          I have had real work experience making websites as a Freelancer (where I have 
+          learned optimization, best practices, SEO and positioning according to Google) 
+          and experience in teams doing faculty projects and courses, which I do to deepen
+          my knowledge. <br/>
+          I consider that as well as developing; communicating, listening and working in 
+          teams are skills that are trained daily and I love that. I am very happy to be 
+          part of the IT world and I look forward to collaborate with everything I learned 
+          this time and keep learning every day.
+          </p>-->
         <div class="about__buttons">
           <div class="about__btns">
             <a href="#" class="button2">Hire me</a>
