nose q cambie xdd

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,6 +44,21 @@
           I'm Tomás and I'm a <span class="typing-2">Full Stack Developer</span>
         </div>
         <p>
+          I started in the world of development when I began my technical degree
+          at UTN two years ago and since then I am excited and motivated to know
+          every day a little more, to have every day more tools.<br />
+          I have had real work experience making websites as a Freelancer (where
+          I have learned optimization, best practices, SEO and positioning
+          according to Google) and experience in teams doing faculty projects
+          and courses, which I do to deepen my knowledge. <br />
+          I consider that as well as developing; communicating, listening and
+          working in teams are skills that are trained daily and I love that. I
+          am very happy to be part of the IT world and I look forward to
+          collaborate with everything I learned this time and keep learning
+          every day.
+        </p>
+        <!-- 
+          <p>
           Empecé en el mundo del desarrollo cuando comencé mi tecnicatura en la
           UTN hace dos años y desde entonces me entusiasma y me motiva saber
           todos los días un poco más, contar todos los días con más
@@ -58,20 +73,7 @@
           Estoy muy contento de formar parte del mundo IT y espero con ansias
           poder colaborar con todo lo que aprendí este tiempo y seguir
           aprendiendo a diario!.
-        </p>
-        <!-- 
-          <p>I started in the world of development when I began my technical degree at 
-          UTN two years ago and since then I am excited and motivated to know every day 
-          a little more, to have every day more tools.<br/>
-          I have had real work experience making websites as a Freelancer (where I have 
-          learned optimization, best practices, SEO and positioning according to Google) 
-          and experience in teams doing faculty projects and courses, which I do to deepen
-          my knowledge. <br/>
-          I consider that as well as developing; communicating, listening and working in 
-          teams are skills that are trained daily and I love that. I am very happy to be 
-          part of the IT world and I look forward to collaborate with everything I learned 
-          this time and keep learning every day.
-          </p>-->
+        </p>-->
         <div class="about__buttons">
           <div class="about__btns">
             <a href="#" class="button2">Hire me</a>
@@ -339,10 +341,12 @@
               <div class="qualification__data-right">
                 <div class="quialification__data-element">
                   <h3 class="qualification_title">Freelace</h3>
-                  <span class="qualification_subtitle">Creacion de paginas web</span>
+                  <span class="qualification_subtitle"
+                    >Creation of web pages</span
+                  >
                   <div class="qualification_calendar">
-                    <i><img src="../assets/icons/calendar-alt.svg" alt=""></i>
-                    2019 - Actualidad
+                    <i><img src="../assets/icons/calendar-alt.svg" alt="" /></i>
+                    2019 - Present
                   </div>
                 </div>
               </div>
@@ -358,10 +362,10 @@
             <div class="qualification_data">
               <div class="qualification__data-right">
                 <div class="quialification__data-element">
-                  <h3 class="qualification_title">Secundaria</h3>
-                  <span class="qualification_subtitle">Tenico Electronico</span>
+                  <h3 class="qualification_title">high school</h3>
+                  <span class="qualification_subtitle">Electronic Technician</span>
                   <div class="qualification_calendar">
-                    <i><img src="../assets/icons/calendar-alt.svg" alt=""></i>
+                    <i><img src="../assets/icons/calendar-alt.svg" alt="" /></i>
                     2011 - 2017
                   </div>
                 </div>
@@ -382,7 +386,7 @@
                   <h3 class="qualification_title">Codo a Codo</h3>
                   <span class="qualification_subtitle">Full Stack Java</span>
                   <div class="qualification_calendar">
-                    <i><img src="../assets/icons/calendar-alt.svg" alt=""></i>
+                    <i><img src="../assets/icons/calendar-alt.svg" alt="" /></i>
                     2017 - 2018
                   </div>
                 </div>
@@ -393,11 +397,11 @@
                 <div class="quialification__data-element">
                   <h3 class="qualification_title">UTN</h3>
                   <span class="qualification_subtitle"
-                    >Tenicatura universitaria en programacion</span
+                    >University tenicature in programming</span
                   >
                   <div class="qualification_calendar">
-                    <i><img src="../assets/icons/calendar-alt.svg" alt=""></i>
-                    2018 - Actualidad
+                    <i><img src="../assets/icons/calendar-alt.svg" alt="" /></i>
+                    2018 - Present
                   </div>
                 </div>
               </div>
@@ -417,7 +421,7 @@
                   <h3 class="qualification_title">Codo a Codo 4.0</h3>
                   <span class="qualification_subtitle">Full Stack Python</span>
                   <div class="qualification_calendar">
-                    <i><img src="../assets/icons/calendar-alt.svg" alt=""></i>
+                    <i><img src="../assets/icons/calendar-alt.svg" alt="" /></i>
                     2021/08 - 2021/12
                   </div>
                 </div>
@@ -436,21 +440,36 @@
     <div class="contact__container container grid">
       <div>
         <div class="contact__information">
-          <i><img src="../assets/icons/phone.svg" alt="icono phone" class="contact__icon"></i>
+          <i
+            ><img
+              src="../assets/icons/phone.svg"
+              alt="icono phone"
+              class="contact__icon"
+          /></i>
           <div>
             <h3 class="contact__title">Call Me</h3>
             <span class="contact__subtitle">+54 9 11 2257-1433</span>
           </div>
         </div>
         <div class="contact__information">
-          <i><img src="../assets/icons/envelope.svg" alt="icono email" class="contact__icon"></i>
+          <i
+            ><img
+              src="../assets/icons/envelope.svg"
+              alt="icono email"
+              class="contact__icon"
+          /></i>
           <div>
             <h3 class="contact__title">Email</h3>
             <span class="contact__subtitle">contact@lodolatomas.com.ar</span>
           </div>
         </div>
         <div class="contact__information">
-          <i><img src="../assets/icons/location-point.svg" alt="icono ubicacion" class="contact__icon"></i>
+          <i
+            ><img
+              src="../assets/icons/location-point.svg"
+              alt="icono ubicacion"
+              class="contact__icon"
+          /></i>
           <div>
             <h3 class="contact__title">Location</h3>
             <span class="contact__subtitle">CABA - Argentina</span>
@@ -461,24 +480,45 @@
         <div class="contact__inputs grid">
           <div class="contact__content">
             <label for="name" class="contact__label">Name</label>
-            <input type="text" class="contact__input" name="name" id="name">
+            <input type="text" class="contact__input" name="name" id="name" />
           </div>
           <div class="contact__content">
             <label for="email" class="contact__label">Email</label>
-            <input type="email" class="contact__input" name="email" id="email">
+            <input
+              type="email"
+              class="contact__input"
+              name="email"
+              id="email"
+            />
           </div>
           <div class="contact__content">
             <label for="project" class="contact__label">Project</label>
-            <input type="text" class="contact__input" name="project" id="project">
+            <input
+              type="text"
+              class="contact__input"
+              name="project"
+              id="project"
+            />
           </div>
           <div class="contact__content">
             <label for="message" class="contact__label">Message</label>
-            <textarea name="message" id="message" cols="0" rows="7" class="contact__input"></textarea>
+            <textarea
+              name="message"
+              id="message"
+              cols="0"
+              rows="7"
+              class="contact__input resizeNone"
+            ></textarea>
           </div>
           <div>
             <a href="" class="contact__form-button button--flex">
               <p>Send Message</p>
-              <i class="button__icon"><img src="../assets/icons/message.svg" alt="" class="contact__form-icon"></i>
+              <i class="button__icon"
+                ><img
+                  src="../assets/icons/message.svg"
+                  alt=""
+                  class="contact__form-icon"
+              /></i>
             </a>
           </div>
         </div>
