--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -504,7 +504,7 @@
             <label for="message" class="contact__label">Message</label>
             <textarea
               name="message"
-              id="message"
+              id="message"git 
               cols="0"
               rows="7"
               class="contact__input resizeNone"
