--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -9,7 +9,7 @@
     <div class="skills__content-list-item-rows">
         <a href="javascript:void(0)" (click)="prev()">
           <img
-            src="../assets/icons/arrow.svg"
+            src="../../assets/icons/arrow.svg"
             alt="arrow"
             height="30px"
             width="30px"
@@ -17,7 +17,7 @@
         </a>
         <a href="javascript:void(0)" (click)="next()">
           <img
-            src="../assets/icons/arrow.svg"
+            src="../../assets/icons/arrow.svg"
             alt="arrow"
             height="30px"
             width="30px"
