--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,652 +1,13 @@
-/* FONTS GOOGLE */
-@font-face {
-  font-family: "Ubuntu-Light";
-  src: url(./assets/font/Ubuntu-Light.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Ubuntu-Regular";
-  src: url(./assets/font/Ubuntu-Regular.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Ubuntu-Medium";
-  src: url(./assets/font/Ubuntu-Medium.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Ubuntu-Bold";
-  src: url(./assets/font/Ubuntu-Bold.ttf) format("truetype");
-}
-/* VARIABLES CSS */
-
-$header-height: 4rem;
-
-$color-primary: #5271ff;
-$color-secondary: #ffffff;
-$background-color: #020414;
-$text-color: #6a6c7c;
-$text-color-light: #9fa0ad;
-$input-color: #eeeffc;
-$font-family-Light: "Ubuntu-Light", sans-serif;
-$font-family-Regular: "Ubuntu-Regular", sans-serif;
-$font-family-Medium: "Ubuntu-Medium", sans-serif;
-$font-family-Bold: "Ubuntu-Bold", sans-serif;
-
-/* .5rem=8px, 1rem=16px, 1.5rem=24px ... */
-$very-big-font-size: 3rem;
-$big-font-size: 2rem;
-$h1-font-size: 1.5rem;
-$h2-font-size: 1.25rem;
-$h3-font-size: 1.125rem;
-$normal-font-size: 0.938rem;
-$small--font-size: 0.813rem;
-$smaller-font-size: 0.75rem;
-
-/* Font wight */
-$font-medium: 500;
-$font-semi-bold: 600;
-$font-bold: 700;
-$font-extra-bold: 800;
-
-/* Margin bottom */
-$mb-0-25: 0.25rem;
-$mb-0-5: 0.5rem;
-$mb-0-75: 0.75rem;
-$mb-1: 1rem;
-$mb-1-5: 1.5rem;
-$mb-2: 2rem;
-$mb-2-5: 2.5rem;
-$mb-3: 3rem;
-
-/* Z index */
-
-$z-tooltip: 10;
-$z-fixed: 100;
-$z-modal: 1000;
-
-/* font size for large devices */
-@media screen and (min-width: 968px) {
-  :root {
-    $big-font-size: 3rem;
-    $h1-font-size: 2.25rem;
-    $h2-font-size: 1.5rem;
-    $h3-font-size: 1.25rem;
-    $normal-font-size: 1rem;
-    $small--font-size: 0.875rem;
-    $smaller-font-size: 0.813rem;
-  }
-}
-
-/* Base */
-
-*,
-*:before,
-*:after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  scroll-behavior: smooth;
-}
-
+@import '/src/assets/scss/global';
 body {
-  margin: 0 0 $header-height 0;
-  font-size: $normal-font-size;
-  background-color: $background-color;
-  color: $color-secondary;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  color: $color-secondary;
-  font-weight: $font-medium;
-}
-
-p {
   margin: 0 !important;
-}
-
-ul {
-  list-style: none;
-  margin: 0 !important;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-.active {
-  color: $color-primary;
-}
-
-#home,
-#about,
-#skills {
-  padding: 200px 0;
-}
-
-/* Reusable css Classes */
-
-/* .section{
-  padding: 2rem 0 4rem;
-} */
-.section__title {
-  font-family: $font-family-Regular;
-  font-size: $very-big-font-size;
-}
-
-.section__subtitle {
-  display: block;
-  font-size: $h2-font-size;
-  font-family: $font-family-Light;
-  margin-bottom: $mb-3;
-}
-
-.section__title,
-.section__subtitle {
-  text-align: center;
-}
-
-/* layout */
-
-.container {
-  width: 100%;
-  margin-left: $mb-1-5;
-  margin-right: $mb-1-5;
-}
-
-.grid {
-  display: grid;
-  gap: 1.5rem;
-}
-
-/* nav */
-
-.header {
+  padding: 0 !important;
+  font-family: "Ubuntu", sans-serif;
+  line-height: 1.3;
+  font-size: 1.125rem;
   background-color: $background-color;
-  box-shadow: 0 0.5rem 0.5rem rgba(61, 61, 61, 0.25);
-  position: sticky;
-  display: flex;
-  justify-content: center;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav__logo {
-  h2 {
-    display: flex;
-    flex-wrap: nowrap;
-  }
-  font-family: $font-family-Bold;
-  font-size: $h1-font-size;
-  .nav_logo_color {
-    color: $color-primary;
-    display: inline-block;
-  }
-}
-
-.nav__list {
-  display: inline-block;
-  font-family: $font-family-Regular;
-  font-size: $h2-font-size;
-  ul {
-    display: inline-block;
-    display: flex;
-    flex-wrap: nowrap;
-    li {
-      display: inline-block;
-      margin: $mb-1-5;
-    }
-  }
-}
-
-.max-width {
-  max-width: 1300px;
-  padding: 0 80px;
-  margin: auto;
-}
-
-.button1 {
-  background: $color-primary;
-  color: #fff;
-}
-.button2:hover {
-  background: $color-primary;
-  color: #fff;
-}
-.button1:hover {
-  color: #fff;
-  background: none;
-}
-
-/* home section styling */
-.home {
-  display: flex;
-  height: 100vh;
-  color: #fff;
-  min-height: 500px;
-  .max-width {
-    width: 100%;
-    display: flex;
-  }
-  .home-content .text-1 {
-    font-family: $font-family-Regular;
-    font-size: $big-font-size;
-  }
-  .home-content .text-2 {
-    font-size: $very-big-font-size;
-    font-family: $font-family-Bold;
-    margin-left: -3px;
-  }
-  .home-content .text-3 {
-    font-size: $big-font-size;
-    font-family: $font-family-Regular;
-    margin: 5px 0;
-  }
-  .home-content .text-3 span {
-    color: $color-primary;
-    font-weight: $font-medium;
-    font-size: $big-font-size;
-  }
-  .home__btns {
-    margin-top: $mb-1-5;
-    width: 320px;
-    display: flex;
-    justify-content: space-between;
-    a {
-      display: inline-block;
-      color: #fff;
-      font-size: $normal-font-size;
-      font-family: $font-family-Medium;
-      padding: 12px 36px;
-      margin-top: $mb-0-75;
-      font-weight: 400;
-      border-radius: 40px;
-      border: 2px solid $color-primary;
-      transition: all 0.3s ease;
-    }
-  }
-}
-
-section .title {
-  position: relative;
-  text-align: center;
-  font-size: 40px;
-  margin-bottom: 60px;
-  padding-bottom: 20px;
-}
-/* about section styling */
-.about .about-content {
-  display: flex;
-}
-section .title::before {
-  content: "";
-  position: absolute;
-  bottom: 0px;
-  left: 50%;
-  width: 180px;
-  height: 3px;
-  background: #ffffff;
-  transform: translateX(-50%);
-}
-section .title::after {
-  position: absolute;
-  bottom: -8px;
-  left: 50%;
-  font-size: 20px;
-  color: $color-primary;
-  padding: 0 5px;
-  background: $background-color;
-  transform: translateX(-50%);
-}
-
-.about {
-  .about-content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-evenly;
-  }
-  .title {
-    text-transform: capitalize;
-    z-index: -1;
-    font-family: $font-family-Regular;
-    font-size: $very-big-font-size;
-  }
-  .title::after {
-    font-family: $font-family-Medium;
-    font-size: $h2-font-size;
-    content: "who I am";
-  }
-  .about-content .left {
-    width: 400px;
-  }
-  .about-content .left img {
-    height: 400px;
-    width: 400px;
-    object-fit: cover;
-    border-radius: 10px;
-  }
-  .about-content .right {
-    width: 600px;
-  }
-  .about-content .right .text {
-    font-family: $font-family-Regular;
-    font-size: $big-font-size;
-    font-weight: 600;
-    margin-bottom: 10px;
-  }
-  .about-content .right .text span {
-    color: $color-primary;
-  }
-  .about-content .right p {
-    line-height: 25px;
-    text-align: justify;
-    font-family: $font-family-Light;
-    font-size: $h2-font-size;
-  }
-  .about__buttons {
-    display: flex;
-    justify-content: center;
-    .about__btns {
-      margin-top: $mb-1-5;
-      width: 320px;
-      display: flex;
-      justify-content: space-between;
-      a {
-        display: inline-block;
-        color: #fff;
-        font-size: $normal-font-size;
-        font-family: $font-family-Medium;
-        padding: 12px 36px;
-        margin-top: $mb-0-75;
-        font-weight: 400;
-        border-radius: 40px;
-        border: 2px solid $color-primary;
-        transition: all 0.3s ease;
-      }
-    }
-  }
-}
-
-.skills {
-  height: 100vh;
-  .skills__list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    font-family: $font-family-Medium;
-    font-size: $h1-font-size;
-    ul {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      justify-content: space-evenly;
-      li {
-        display: inline-block;
-        margin: $mb-1-5;
-        .active {
-          color: $color-primary;
-        }
-      }
-    }
-  }
-
-  .skills__carrousel {
-    width: 100%;
-    max-width: 120em;
+  &.no-scroll {
     overflow: hidden;
   }
-
-  .skills__content {
-    width: 300%;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    transition: all 0.5s ease-in-out;
-    transform: translatex(0%);
-    overflow: hidden;
-  }
-  .skills__content-section {
-    width: calc(100% / 3);
-  }
-  .skills__content-list-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 500px;
-    .skills__content-list-item-options {
-      margin: auto;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      width: 100%;
-      h3 {
-        text-align: center;
-        margin: 30px 0 30px 0;
-        font-family: $font-family-Regular;
-        font-size: $h2-font-size;
-        width: 15%;
-        white-space: nowrap;
-      }
-    }
-    .skills__content-list-item-content {
-      width: 80%;
-      height: 500px;
-      h3 {
-        margin: 30px 0 30px 0;
-        font-family: $font-family-Regular;
-        font-size: $h2-font-size;
-      }
-      ul {
-        display: grid;
-        justify-items: center;
-        width: 100%;
-        align-content: center;
-        justify-content: center;
-      }
-      .two-skills {
-        grid-template-columns: 1fr 1fr 1fr;
-      }
-      .one-skills {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-      }
-    }
-  }
-}
-.next {
-  transform: rotate(180deg);
-}
-.myskills__carousel {
-  width: calc(100% / 3);
-  height: 500px;
-  /* overflow: hidden; */
-}
-.myskills__carousel-big {
-  height: 300%;
-  background-color: lightblue;
-  transition: all 0.5s ease-in-out;
-  transform: translateY(0%);
 }
 
-.skills__content-list-item-rows {
-  left: 60px;
-  display: flex;
-  position: absolute;
-  flex-direction: column;
-  top: 34%;
-  height: 33.3333%;
-  width: 50px;
-  z-index: 100;
-  justify-content: space-between;
-  align-items: center;
-  align-content: space-between;
-}
-
-.image {
-  display: inline-block;
-  width: 150px;
-  height: 150px;
-  object-fit: contain;
-  margin: 40px;
-  filter: grayscale(1);
-  transition: all 0.3s ease-in-out;
-  cursor: pointer;
-  &:hover {
-    filter: grayscale(0);
-  }
-}
-
-.qualification_data {
-  display: grid;
-  grid-template-columns: 1fr max-content 1fr;
-  grid-column-gap: 1.5rem;
-  column-gap: 1.5rem;
-  justify-items: center;
-}
-.qualification_title {
-  font-family: $font-family-Medium;
-  font-size: $h2-font-size;
-}
-
-.qualification_subtitle {
-  display: inline-block;
-  font-family: $font-family-Light;
-  font-size: $h3-font-size;
-  margin-bottom: $mb-1;
-}
-
-.qualification_calendar {
-  font-size: $normal-font-size;
-  color: lightgray;
-}
-
-.qualification__rounder {
-  display: inline-block;
-  width: 15px;
-  height: 15px;
-  border-radius: 50%;
-  background-color: $color-primary;
-}
-
-.qualification__line {
-  display: block;
-  width: 2px;
-  height: 100%;
-  background-color: $color-primary;
-  transform: translate(6px, -7px);
-}
-.qualification__data-right {
-  width: 100%;
-  display: flex;
-  justify-content: flex-end;
-}
-.qualification__data-left {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-}
-
-.qualification_calendar img {
-  width: 20px;
-  height: 20px;
-  margin-right: 5px;
-}
-
-.contact__container {
-  font-family: $font-family-Regular;
-  row-gap: 3rem;
-  grid-template-columns: repeat(2, 1fr);
-  .contact__information {
-    display: flex;
-    margin-bottom: $mb-2;
-  }
-}
-.contact__icon {
-  width: 2rem;
-  height: 2rem;
-  font-size: 2rem;
-  color: $color-primary;
-  margin-right: $mb-0-75;
-}
-
-.contact__title {
-  font-size: $h2-font-size;
-  font-family: $font-family-Medium;
-}
-
-.contact__subtitle {
-  font-size: $h3-font-size;
-  color: $color-primary;
-}
-
-.contact__content {
-  background-color: $input-color;
-  border-radius: 0.5rem;
-  padding: 0.75rem 1rem 0.25rem;
-}
-
-.contact__label {
-  font-family: $font-family-Regular;
-  font-size: $h3-font-size;
-  color: $background-color;
-}
-
-.contact__input {
-  width: 100%;
-  background-color: $input-color;
-  color: $text-color;
-  font-family: $font-family-Light;
-  font-size: $normal-font-size;
-  border: none;
-  outline: none;
-  padding: 0.25rem 0.5rem 0.5rem 0;
-}
-.contact__form-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: $color-primary;
-  font-size: 0.938rem;
-  font-family: "Ubuntu-Medium", sans-serif;
-  padding: 12px 36px;
-  margin-top: 0.75rem;
-  font-weight: 400;
-  border-radius: 40px;
-  border: 2px solid #5271ff;
-  transition: all 0.3s ease-out;
-  &:hover {
-    background: $color-primary;
-    color: $color-secondary;
-    img{
-      filter:brightness(500%);
-    }
-  }
-
-  p{
-    display: inline-block;
-    font-size: 1.125rem;
-  }
-  .contact__form-icon {
-    width: 20px;
-    margin-top: 7px;
-    height: 100%;
-    margin-left: .225rem;
-  }
-}
-
-.resizeNone{
-  resize: none;
-}
