--- a/src/app/shared/components/skills/skills.component.scss
+++ b/src/app/shared/components/skills/skills.component.scss
@@ -52,11 +52,6 @@ section .title::after {
   text-align: center;
 }
 
-.container {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
 .button {
   margin: 0.5rem 0;
   width: 8rem;
@@ -112,63 +107,61 @@ section .title::after {
     width: 100%;
     max-width: 120em;
     overflow: hidden;
+    margin: auto;
   }
 
   .skills__content {
     width: 300%;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
     transition: all 0.5s ease-in-out;
     transform: translatex(0%);
     overflow: hidden;
+    justify-content: flex-end;
+    /* ####################################Height aki################################################################################################ */
   }
   .skills__content-section {
     width: calc(100% / 3);
+    margin: auto 0;
+    padding: 0 0.5rem;
   }
   .skills__content-list-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 500px;
     .skills__content-list-item-options {
       margin: auto;
       display: flex;
-      flex-direction: row;
-      justify-content: space-between;
       align-items: center;
+      justify-content: center;
       width: 100%;
+      flex-wrap: wrap;
       h3 {
         text-align: center;
         margin: 30px 0 30px 0;
+        width: 108px;
         font-weight: $font-weight-Regular;
         font-size: $h2-font-size;
-        width: 15%;
+        left: 0;
         white-space: nowrap;
       }
     }
     .skills__content-list-item-content {
-      width: 80%;
-      height: 500px;
+      width: 749px;
+      display: flex;
+      align-content: center;
+      align-items: center;
       h3 {
         margin: 30px 0 30px 0;
         font-weight: $font-weight-Regular;
         font-size: $h2-font-size;
       }
       ul {
+        margin: auto;
         display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
         justify-items: center;
         width: 100%;
         align-content: center;
         justify-content: center;
-      }
-      .two-skills {
-        grid-template-columns: 1fr 1fr 1fr;
-      }
-      .one-skills {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
+        padding: 0 !important;
       }
     }
   }
@@ -176,7 +169,6 @@ section .title::after {
 
 .myskills__carousel {
   width: calc(100% / 3);
-  height: 500px;
   /* overflow: hidden; */
 }
 .myskills__carousel-big {
@@ -202,15 +194,14 @@ section .title::after {
 
 .image {
   display: inline-block;
-  width: 100px;
-  height: 100px;
+  width: 115px;
   object-fit: contain;
-  margin: 40px;
-  filter: grayscale(1);
+  margin: 20px;
+  filter: grayscale(0);
   transition: all 0.3s ease-in-out;
   cursor: pointer;
   &:hover {
-    filter: grayscale(0);
+    filter: grayscale(1);
   }
 }
 
