Responsive Design Skills

--- a/src/app/shared/components/skills/skills.component.scss
+++ b/src/app/shared/components/skills/skills.component.scss
@@ -122,7 +122,7 @@ section .title::after {
   }
   .skills__content-section {
     width: calc(100% / 3);
-    margin: auto 0;
+    margin: 50px 0;
     padding: 0 0.5rem;
   }
   .skills__content-list-item {
